examples/test/testpolicy14055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14055
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key38: value36
      key7: value9
      key11: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value34
          key9: value31
          key45: value27
      podSelector:
        matchLabels:
          key22: value1
